--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -41,7 +42,9 @@
     "circom_tester": "^0.0.19",
     "circomlib": "^2.0.5",
     "circomlibjs": "^0.1.7",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "cosmos-wallet": "^1.2.0",
     "cosmwasm": "^1.1.1",
     "crypto": "^1.0.1",
@@ -52,16 +55,21 @@
     "express": "~4.16.1",
     "fixed-merkle-tree": "git+https://github.com/lquochieu/fixed-merkle-tree.git",
     "fs": "^0.0.1-security",
+    "fs-extra": "^10.1.0",
     "google-protobuf": "^3.21.2",
     "hardhat": "^2.13.1",
     "http-errors": "~1.6.3",
     "i": "^0.3.7",
     "jade": "~1.11.0",
+    "mongoose": "^6.6.3",
     "morgan": "~1.9.1",
+    "node-cron": "^3.0.2",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.22",
     "npm": "^9.6.5",
     "snarkjs": "^0.5.0",
-    "tasksfile": "^5.1.1"
+    "swagger-ui-express": "^4.5.0",
+    "tasksfile": "^5.1.1",
+    "ts-node": "^10.9.1"
   }
 }
