--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "snarkjs": "^0.5.0",
     "swagger-ui-express": "^4.5.0",
     "tasksfile": "^5.1.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "winston": "^3.9.0"
   }
 }
